--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             starsContainer.appendChild(star);
         }
     </script>
-
+<a href="sait1.html" class="text-white underline absolute bottom-4 left-4">次のページ →</a>
 </body></html>
       
 ページ 2
